estruturada seção cards

--- a/index.html
+++ b/index.html
@@ -57,13 +57,32 @@
     
     <div class="cartoes">
         <div class="texto_cartoes">
-            <p  class="_titulo">Cartões</p>
+            <p  class="cartoes_titulo">Cartões</p>
             <p  class="cartoes_texto">Benefícios exclusivos do cartão NullBank</p>
             <p class="cartoes_subtexto">Maximize seu poder de compra com os benefícios que você merece. Conquiste mais recompensas, descontos e praticidade no seu dia a dia.</p>
             <p class="maisinfos">Ver mais informações</p>
         </div>
         <div class="cards">
-
+                <div class="recompensas">
+                    <img src="#">
+                    <p class="cards_titulo">Recompensas</p>
+                    <p class="cards_texto">Acumule pontos em cada compra e troque por produtos, serviços, milhas aéreas e muito mais.</p>
+                </div>
+                <div class="descontos">
+                    <img src="#">
+                    <p class="cards_titulo">Descontos</p>
+                    <p class="cards_texto">Taxas de juros e tarifas de serviços competitivas, oferecendo melhores condições.</p>
+                </div>
+                <div class="cashback">
+                    <img src="#">
+                    <p class="cards_titulo">Cashback</p>
+                    <p class="cards_texto">Ganhe uma porcentagem do valor gasto de volta em todas as compras.</p>
+                </div>
+                <div class="cartao_internacional">
+                    <img src="#">
+                    <p class="cards_titulo">Cartão Internacional</p>
+                    <p class="cards_texto">Geração de cartões virtuais para compras online, garantindo maior segurança e controle.</p>
+                </div>
         </div>
     </div>
 <footer>
