--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                     <p class="cards_titulo">Cartão Internacional</p>
                     <p class="cards_texto">Geração de cartões virtuais para compras online, garantindo maior segurança e controle.</p>
                 </div>
+                <div class="carteiras_digitais">
+                    <img src="#">
+                    <p class="cards_titulo">Carteiras Digitais</p>
+                    <p class="cards_texto">Aceito em milhões de estabelecimentos ao redor do mundo, facilitando compras e viagens internacionais.</p>
+                </div>
         </div>
     </div>
 <footer>
