--- a/index.html
+++ b/index.html
@@ -90,6 +90,54 @@
                 </div>
         </div>
     </div>
+
+
+    <div class="app">
+        <div class="imagem_cartao">
+            <img src="imagens\app.svg">
+        </div>
+        <div class="app_texto">
+            <p>APP</p>
+            <p class="titulo">Controle total na palma da sua mão</p>
+            <p class="sub_texto">Tudo o que você precisa, em apenas um aplicativo. Crie uma conta, ative seu cartão e economize em tudo, desde mercearias até carros alugados.</p>
+            <div class="app_cashback">
+                <img src="#">
+                <h2>Cashback</h2>
+                <p>Receba parte do seu dinheiro de volta em todas as suas compras.</p>
+            </div>
+            <div class="app_ofertas">
+                <img src="#">
+                <h2>Ofertas</h2>
+                <p>Acesse promoções exclusivas diretamente no app.</p>
+            </div>
+            <div class="app_Segurança">
+                <img src="#">
+                <h2>Segurança</h2>
+                <p>Bloqueie e configure seu cartão com facilidade.</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="download">
+        <h2>Disponível para você</h2>
+        <h1>Controle total do seu dinheiro, onde e quando quiser</h1>
+        <p>Baixe o aplicativo e descubra uma nova forma de gerenciar suas finanças, com praticidade, segurança e agilidade.</p>\
+        <a href="#" class="playstore">Google Play</a>
+        <a href="#" class="applestore">Apple Store</a>
+        <img src="imagens\app (1).svg">
+        <img src="imagens\app (2).svg">
+    </div>
+
+
+    <div class="cta">
+        <img src="imagens\Rectangle 3603.png">
+        <div class="venha_ser">
+            <h1>Venha ser nulo você também!</h1>
+            <a href="#" class="abra_conta">Crie sua conta </a>
+        </div>
+    </div>
+
 <footer>
     <div class="links">
         <div class="paravc">
