bugfix de diversas divs

--- a/index.html
+++ b/index.html
@@ -64,59 +64,107 @@
         </div>
         <div class="cards">
                 <div class="recompensas">
-                    <img src="#">
-                    <p class="cards_titulo">Recompensas</p>
-                    <p class="cards_texto">Acumule pontos em cada compra e troque por produtos, serviços, milhas aéreas e muito mais.</p>
+                    <div class="recompensas_titulo">
+                        <img src="imagens\gift.svg">
+                        <a class="cards_titulo">Recompensas</a>
+                    </div>
+                    <div class="recompensas_texto">
+                        <a class="cards_texto">Acumule pontos em cada compra e troque por produtos, serviços, milhas aéreas e muito mais.</a>
+                    </div>
                 </div>
                 <div class="descontos">
-                    <img src="#">
-                    <p class="cards_titulo">Descontos</p>
-                    <p class="cards_texto">Taxas de juros e tarifas de serviços competitivas, oferecendo melhores condições.</p>
+                    <div class="descontos_titulo">
+                        <img src="imagens\percent.svg">
+                        <a class="cards_titulo">Descontos</a>
+                    </div>
+                    <div class="descontos_texto">
+                        <a class="cards_texto">Taxas de juros e tarifas de serviços competitivas, oferecendo melhores condições.</a>
+                    </div>
                 </div>
-                <div class="cashback">
-                    <img src="#">
-                    <p class="cards_titulo">Cashback</p>
-                    <p class="cards_texto">Ganhe uma porcentagem do valor gasto de volta em todas as compras.</p>
+                <div class="cards_cashback">
+                    <div class="cards_cashback_titulo">
+                        <img src="imagens\banknote.svg">
+                        <a class="cards_titulo">Cashback</a>
+                    </div>
+                    <div class="cards_cashback_texto">
+                        <a class="cards_texto">Ganhe uma porcentagem do valor gasto de volta em todas as compras.</a>
+                    </div>
                 </div>
                 <div class="cartao_internacional">
-                    <img src="#">
-                    <p class="cards_titulo">Cartão Internacional</p>
-                    <p class="cards_texto">Geração de cartões virtuais para compras online, garantindo maior segurança e controle.</p>
+                    <div class="cartao_internacional_titulo">
+                        <img src="imagens\credit-card.svg">
+                        <a class="cards_titulo">Cartão Internacional</a>
+                    </div>
+                    <div class="cartao_internacional_texto">
+                        <a class="cards_texto">Geração de cartões virtuais para compras online, garantindo maior segurança e controle.</a>
+                    </div>
                 </div>
                 <div class="carteiras_digitais">
-                    <img src="#">
-                    <p class="cards_titulo">Carteiras Digitais</p>
-                    <p class="cards_texto">Aceito em milhões de estabelecimentos ao redor do mundo, facilitando compras e viagens internacionais.</p>
+                    <div class="carteiras_digitais_titulo">
+                        <img src="imagens\wallet-minimal.svg">
+                        <a class="cards_titulo">Carteiras Digitais</a>
+                    </div>
+                    <div class="carteiras_digitais_texto">
+                        <a class="cards_texto">Aceito em milhões de estabelecimentos ao redor do mundo, facilitando compras e viagens internacionais.</a>
+                    </div>
+                    <div class="retangulo_roxo">
+                        <img src="imagens\Rectangle 1020.png" class="retangulo_branco">
+                    </div>
+                    <div class="retangulo_roxo">   
+                        <img src="imagens\Rectangle 1037.png" class="retangulo_roxo">
+                    </div>
+                    
                 </div>
         </div>
     </div>
 
-
-    <div class="app">
+<div class="app">
+    <div class="app_imagem">
         <div class="imagem_cartao">
-            <img src="imagens\app.svg">
-        </div>
-        <div class="app_texto">
-            <p>APP</p>
-            <p class="titulo">Controle total na palma da sua mão</p>
-            <p class="sub_texto">Tudo o que você precisa, em apenas um aplicativo. Crie uma conta, ative seu cartão e economize em tudo, desde mercearias até carros alugados.</p>
-            <div class="app_cashback">
-                <img src="#">
-                <h2>Cashback</h2>
-                <p>Receba parte do seu dinheiro de volta em todas as suas compras.</p>
-            </div>
-            <div class="app_ofertas">
-                <img src="#">
-                <h2>Ofertas</h2>
-                <p>Acesse promoções exclusivas diretamente no app.</p>
-            </div>
-            <div class="app_Segurança">
-                <img src="#">
-                <h2>Segurança</h2>
-                <p>Bloqueie e configure seu cartão com facilidade.</p>
-            </div>
+            <img src="imagens\app.svg" height="609px" width="380px">
         </div>
     </div>
+    <div class="app_texto">
+        <div class="app_conteudo">
+            <p>APP</p>
+            <p class="app_conteudo_titulo">Controle total na palma da sua mão</p>
+            <div class="app_conteudo_subtexto">
+                <p class="sub_texto">Tudo o que você precisa, em apenas um aplicativo. Crie uma conta, ative seu cartão e economize em tudo, desde mercearias até carros alugados.</p>
+            </div>
+        </div>
+
+        <div class="app_cashback"> 
+            <div class="cashback_img">
+                <img src="imagens\banknote (1).svg" height="32px" width="32px">
+            </div>
+            <div class="cashback_texto">
+                <a style="color: #6729FF">Cashback</a>
+                <a>Receba parte do seu dinheiro de volta em todas as suas compras.</a>
+            </div>
+        </div>
+
+        <div class="app_ofertas"> 
+            <div class="ofertas_img">
+                <img src="imagens\gift (1).svg" height="32px" width="32px">
+            </div>
+            <div class="ofertas_texto">
+                <a style="color: #6729FF">Ofertas</a>
+                <a>Acesse promoções exclusivas diretamente no app.</a>
+            </div>
+        </div>
+
+        <div class="app_segurancao"> 
+            <div class="cashback_img">
+                <img src="imagens\shield.svg" height="32px" width="32px">
+            </div>
+            <div class="segurancao_texto">
+                <a style="color: #6729FF">Segurança</a>
+                <a>Bloqueie e configure seu cartão com facilidade.</a>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 
     <div class="download">
@@ -125,13 +173,13 @@
         <p>Baixe o aplicativo e descubra uma nova forma de gerenciar suas finanças, com praticidade, segurança e agilidade.</p>\
         <a href="#" class="playstore">Google Play</a>
         <a href="#" class="applestore">Apple Store</a>
-        <img src="imagens\app (1).svg">
+        <img src="imagens\app (1).svg" sizes="">
         <img src="imagens\app (2).svg">
     </div>
 
 
     <div class="cta">
-        <img src="imagens\Rectangle 3603.png">
+        <img src="imagens\Rectangle 3603.png" width="1440px" height="496px">
         <div class="venha_ser">
             <h1>Venha ser nulo você também!</h1>
             <a href="#" class="abra_conta">Crie sua conta </a>
