--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                     </div>
                     <div class="retangulo_roxo">   
                         <img src="imagens\Rectangle 1037.png" class="retangulo_roxo">
-                    </div>
-                    
+                    </div>  
                 </div>
         </div>
     </div>
@@ -168,22 +167,43 @@
 
 
     <div class="download">
-        <h2>Disponível para você</h2>
-        <h1>Controle total do seu dinheiro, onde e quando quiser</h1>
-        <p>Baixe o aplicativo e descubra uma nova forma de gerenciar suas finanças, com praticidade, segurança e agilidade.</p>\
-        <a href="#" class="playstore">Google Play</a>
-        <a href="#" class="applestore">Apple Store</a>
-        <img src="imagens\app (1).svg" sizes="">
-        <img src="imagens\app (2).svg">
+        <div class="download_texto">
+            <a>Disponível para você</a>
+            <div class="download_titulo">
+                <p>Controle total do seu dinheiro, onde e quando quiser</p>
+            </div>
+            <div class="download_subtexto">
+                <a>Baixe o aplicativo e descubra uma nova forma de gerenciar suas finanças, com praticidade, segurança e agilidade.</a>
+            </div>
+            <div class="download_botao">
+                <div class="playstore">
+                    <img src="imagens\playstore.svg">
+                    <p href="#" >Google Play</p>
+                </div>
+                <div class="applestore">
+                    <img src="imagens\applestore.svg">
+                    <p href="#" >Apple Store</p>
+                </div>
+            </div>
+        </div>
+        <div class="download_imagem">
+            <img src="imagens\app (2).svg" class="download_roxo">
+        </div>
+            <div class="download_imagem">
+                <img src="imagens\app (1).svg" class="download_preto">
+            </div>
     </div>
 
 
     <div class="cta">
         <img src="imagens\Rectangle 3603.png" width="1440px" height="496px">
         <div class="venha_ser">
-            <h1>Venha ser nulo você também!</h1>
-            <a href="#" class="abra_conta">Crie sua conta </a>
+            <p>Venha ser nulo você também!</p>
+            <div class="cta_botao">
+                <a href="#">Crie sua conta </a>
+            </div>
         </div>
+
     </div>
 
 <footer>
