finalizadas paginas 404 e contato

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="imagens/NullBank.svg" >
         </div>
     <div class="navigation_header">
-        <a class="inicio">Início</a>
+        <a class="pagina_atual">Início</a>
         <a href="404.html">Para você</a>
         <a href="404.html">Serviços</a>
         <a href="contact.html">Contato</a>
@@ -236,26 +236,26 @@
         <div class="paravc">
             <a class="titulo">Para você</a>
             <a href="404.html">Contas pessoais</a>
-            <a href="404.html"Empréstimos</a>
-            <a href="404.html"Investimentos</a>  
+            <a href="404.html">Empréstimos</a>
+            <a href="404.html">Investimentos</a>  
         </div>
         <div class="nullbank">
             <a class="titulo">Nullbank</a>
-            <a href="404.html"Sobre nós</a>
-            <a href="404.html"Nossa missão</a>
-            <a href="404.html"Blog</a>
+            <a href="404.html">Sobre nós</a>
+            <a href="404.html">Nossa missão</a>
+            <a href="404.html">Blog</a>
         </div>
         <div class="Serviços">
             <a class="titulo">Serviços</a>
-            <a href="404.html"Conta digital</a>
-            <a href="404.html"Pix e transferências</a>
-            <a href="404.html"Pagamentos online</a>
+            <a href="404.html">Conta digital</a>
+            <a href="404.html">Pix e transferências</a>
+            <a href="404.html">Pagamentos online</a>
         </div>
         <div class="Suporte"> 
             <a class="titulo">Suporte</a>
-            <a href="404.html"Central de ajuda</a>
-            <a href="404.html"Fale conosco</a>
-            <a href="404.html"Perguntas frequentes</a>
+            <a href="404.html">Central de ajuda</a>
+            <a href="404.html">Fale conosco</a>
+            <a href="404.html">Perguntas frequentes</a>
         </div>
         <div class="Newsletter">
             <a  class="titulo">Newsletter</a>
